feat: delete style files

--- a/pages/about/index.module.scss
+++ b/pages/about/index.module.scss
@@ -1,7 +1,7 @@
 .btn {
   padding: 20px 40px;
-  background-color: $color-info-1;
-  border-radius: 40px;
+  background-color: $color-primary;
+  border-radius: 5px;
   margin-top: 50px;
 }
 .wrapper {
