--- a/pages/home.module.scss
+++ b/pages/home.module.scss
@@ -13,6 +13,7 @@
 }
 .desc {
   font-size: 36px;
+  padding: 30px 0;
 }
 .inter {
   width: 100%;
@@ -20,6 +21,8 @@
 .liItem {
   padding-top: 24px;
   padding-left: 44px;
+  padding-right: 44px;
   font-size: 32px;
   text-align: left;
+  line-height: 60px;
 }
